# ciott-antt-integracao

./: .env.example  .gitignore  .tester_config.example.json  LICENSE  README.md  pyproject.toml  tester.py
.docs/: CIOT_VIA_IPEF.md  COMO_OBTER_DLL.md  COMO_TESTAR.md  dcs_regras.md  documento.md
ciot_antt/: __init__.py  _auth.py  _dll_loader.py  client.py  exceptions.py  models.py  storage.py
tests/: test_client.py
